force-app/main/default/objects/Product2/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>