force-app/main/default/objects/Product2/fields/HotelName__c.field-meta.xml
<CustomField>
    <fullName>HotelName__c</fullName>
    <formula>SUBSTITUTE(
  LEFT($Api.Partner_Server_URL_600,FIND(&quot;/services&quot;, $Api.Partner_Server_URL_600)),
  &apos;salesforce.com/&apos;,
  &apos;site.com/SunshineResorts/product/paradise-sands-resort/&apos;&amp;Id 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HotelName</label>
    <type>Text</type>
</CustomField>