force-app/main/default/objects/Product2/fields/Kids_Activities__c.field-meta.xml
<CustomField>
    <fullName>Kids_Activities__c</fullName>
    <description>Activity that hotel offers for Kids under 12</description>
    <label>Kids Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>