force-app/main/default/objects/Product2/fields/Pet_Policy__c.field-meta.xml
<CustomField>
    <fullName>Pet_Policy__c</fullName>
    <label>Pet Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>