force-app/main/default/objects/Product2/fields/TeenAge_Activity__c.field-meta.xml
<CustomField>
    <fullName>TeenAge_Activity__c</fullName>
    <description>Activities for teens</description>
    <label>TeenAge Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>